Se agregaron validaciones para cuando el usuario no llene o marque los campos/botones correspondientes en el sistema de creación de torneos

--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioTorneo.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioTorneo.form
@@ -735,6 +735,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoLimiteEdadActionPerformed"/>
           </Events>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
         </Component>
@@ -744,6 +745,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="CajaValorInscripcion">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
+          </AuxValues>
         </Component>
         <Component class="javax.swing.JButton" name="BotonAtras">
           <Properties>
