--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioJuez.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/FormularioJuez.form
@@ -174,6 +174,9 @@
         <Component class="javax.swing.JTextField" name="CampoNombre">
         </Component>
         <Component class="javax.swing.JTextField" name="CampoCedula">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoCedulaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
@@ -203,6 +206,9 @@
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CajaGeneroActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
